[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/enviroment/BasicTilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/NPC.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://dialogue/DialoguePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enviroment/Stairs.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enviroment/Board.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enviroment/Switch.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemies/OrcBasic.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enviroment/enemies/EnemyCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/levels/Level2.gd" type="Script" id=10]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 64

[sub_resource type="Animation" id=3]
resource_name = "door_unlock"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("BasicTilemap2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BasicTilemap2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("BasicTilemap2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Stairs:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Level2" type="Node2D"]
script = ExtResource( 10 )
enemy_orc_scene = ExtResource( 8 )

[node name="BasicTilemap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -393200, 0, 0, -393199, 0, 1, -393198, 0, 1, -393197, 0, 1, -393196, 0, 2, -327664, 0, 65536, -327663, 0, 65537, -327662, 0, 65537, -327661, 0, 65537, -327660, 0, 65538, -196612, 0, 0, -196611, 0, 1, -196610, 0, 1, -196609, 0, 1, -262144, 0, 1, -262143, 0, 1, -262142, 0, 1, -262141, 0, 1, -262140, 0, 1, -262139, 0, 1, -262138, 0, 1, -262137, 0, 1, -262136, 0, 1, -262135, 0, 1, -262134, 0, 1, -262133, 0, 1, -262132, 0, 1, -262131, 0, 1, -262130, 0, 1, -262129, 0, 1, -262128, 0, 65541, -262127, 0, 65537, -262126, 0, 65537, -262125, 0, 65537, -262124, 0, 65538, -131076, 0, 65536, -131075, 0, 65537, -131074, 0, 65537, -131073, 0, 65537, -196608, 0, 65537, -196607, 0, 65537, -196606, 0, 65537, -196605, 0, 65537, -196604, 0, 65537, -196603, 0, 65537, -196602, 0, 65537, -196601, 0, 262154, -196600, 0, 65537, -196599, 0, 65537, -196598, 0, 65537, -196597, 0, 65537, -196596, 0, 65537, -196595, 0, 65537, -196594, 0, 65537, -196593, 0, 65537, -196592, 0, 196618, -196591, 0, 65537, -196590, 0, 65537, -196589, 0, 65537, -196588, 0, 65538, -65540, 0, 131072, -65539, 0, 131073, -65538, 0, 131073, -65537, 0, 131073, -131072, 0, 131073, -131071, 0, 131073, -131070, 0, 5, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 4, -131066, 0, 131073, -131065, 0, 131073, -131064, 0, 131073, -131063, 0, 131073, -131062, 0, 131073, -131061, 0, 131073, -131060, 0, 131073, -131059, 0, 131073, -131058, 0, 131073, -131057, 0, 131073, -131056, 0, 131073, -131055, 0, 131073, -131054, 0, 131073, -131053, 0, 131073, -131052, 0, 131074, -65534, 0, 65536, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65538, 2, 0, 65536, 3, 0, 65537, 4, 0, 65537, 5, 0, 65538, 65538, 0, 65536, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65538, 131074, 0, 65536, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65538, 262139, 0, 0, 262140, 0, 1, 262141, 0, 1, 262142, 0, 1, 262143, 0, 1, 196608, 0, 1, 196609, 0, 1, 196610, 0, 65541, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65540, 196614, 0, 1, 196615, 0, 1, 196616, 0, 1, 196617, 0, 1, 196618, 0, 1, 196619, 0, 1, 196620, 0, 1, 196621, 0, 2, 327675, 0, 65536, 327676, 0, 65537, 327677, 0, 262154, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 196618, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65538, 393211, 0, 65536, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 262154, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 196618, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65538, 458747, 0, 131072, 458748, 0, 131073, 458749, 0, 131073, 458750, 0, 131073, 458751, 0, 131073, 393216, 0, 131073, 393217, 0, 131073, 393218, 0, 5, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 4, 393222, 0, 131073, 393223, 0, 131073, 393224, 0, 131073, 393225, 0, 131073, 393226, 0, 131073, 393227, 0, 131073, 393228, 0, 131073, 393229, 0, 131074, 458754, 0, 65536, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65538, 524290, 0, 65536, 524291, 0, 196618, 524292, 0, 262154, 524293, 0, 65538, 589826, 0, 65536, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65538, 655362, 0, 65536, 655363, 0, 262154, 655364, 0, 65537, 655365, 0, 65538, 720896, 0, 0, 720897, 0, 1, 720898, 0, 65541, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65538, 786432, 0, 65536, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65538, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65538, 917504, 0, 131072, 917505, 0, 131073, 917506, 0, 131073, 917507, 0, 131073, 917508, 0, 131073, 917509, 0, 131074 )

[node name="BasicTilemap2" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -196612, 0, 0, -196611, 0, 1, -196610, 0, 1, -196609, 0, 1, -262144, 0, 1, -262143, 0, 1, -262142, 0, 1, -262141, 0, 1, -262140, 0, 1, -262139, 0, 1, -262138, 0, 1, -262137, 0, 1, -262136, 0, 1, -262135, 0, 1, -262134, 0, 1, -262133, 0, 1, -262132, 0, 1, -262131, 0, 1, -262130, 0, 1, -262129, 0, 2, -131076, 0, 65536, -131075, 0, 262154, -131074, 0, 65537, -131073, 0, 65537, -196608, 0, 65537, -196607, 0, 65537, -196606, 0, 65537, -196605, 0, 65537, -196604, 0, 65537, -196603, 0, 65537, -196602, 0, 65537, -196601, 0, 65537, -196600, 0, 65537, -196599, 0, 65537, -196598, 0, 65537, -196597, 0, 65537, -196596, 0, 65537, -196595, 0, 196618, -196594, 0, 65537, -196593, 0, 65538, -65540, 0, 131072, -65539, 0, 131073, -65538, 0, 131073, -65537, 0, 131073, -131072, 0, 131073, -131071, 0, 131073, -131070, 0, 5, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 4, -131066, 0, 131073, -131065, 0, 131073, -131064, 0, 131073, -131063, 0, 131073, -131062, 0, 131073, -131061, 0, 131073, -131060, 0, 131073, -131059, 0, 131073, -131058, 0, 131073, -131057, 0, 131074, -65534, 0, 65536, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65538, 2, 0, 65536, 3, 0, 262154, 4, 0, 65537, 5, 0, 65538, 65538, 0, 65536, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65538, 131074, 0, 65536, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65538, 262139, 0, 0, 262140, 0, 1, 262141, 0, 1, 262142, 0, 1, 262143, 0, 1, 196608, 0, 1, 196609, 0, 1, 196610, 0, 65541, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65540, 196614, 0, 1, 196615, 0, 1, 196616, 0, 1, 196617, 0, 1, 196618, 0, 1, 196619, 0, 1, 196620, 0, 1, 196621, 0, 2, 327675, 0, 65536, 327676, 0, 65537, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65538, 393211, 0, 65536, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 262154, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65538, 458747, 0, 131072, 458748, 0, 131073, 458749, 0, 131073, 458750, 0, 131073, 458751, 0, 131073, 393216, 0, 131073, 393217, 0, 131073, 393218, 0, 5, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 4, 393222, 0, 131073, 393223, 0, 131073, 393224, 0, 131073, 393225, 0, 131073, 393226, 0, 131073, 393227, 0, 131073, 393228, 0, 131073, 393229, 0, 131074, 458754, 0, 65536, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65538, 524290, 0, 65536, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65538, 589826, 0, 65536, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65538, 655362, 0, 65536, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65538, 720896, 0, 0, 720897, 0, 1, 720898, 0, 65541, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65538, 786432, 0, 65536, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65538, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65538, 917504, 0, 131072, 917505, 0, 131073, 917506, 0, 131073, 917507, 0, 131073, 917508, 0, 131073, 917509, 0, 131074 )

[node name="Sprite" type="Sprite" parent="BasicTilemap2"]
position = Vector2( 376, -40 )
scale = Vector2( 4.125, 141.063 )
texture = SubResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 8 )]
position = Vector2( -16, 88 )

[node name="Switch" parent="." instance=ExtResource( 7 )]
position = Vector2( -32, -32 )
collision_layer = 12

[node name="Stairs" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 296, -56 )

[node name="NPC" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, 216 )

[node name="DialoguePlayer" parent="NPC" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_2/npc_start.json"

[node name="Board" parent="." instance=ExtResource( 6 )]
position = Vector2( 24, -48 )

[node name="DialoguePlayer" parent="Board" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_2/board.json"

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, 208 )
is_fire_use = false

[node name="enemy_collisions" type="Node" parent="."]

[node name="EnemyCollision" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( -40, 80 )

[node name="EnemyCollision2" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( 184, 80 )

[node name="EnemyCollision3" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( -24, -40 )

[node name="OrcPosition" type="Position2D" parent="."]
position = Vector2( 232, -32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/door_unlock = SubResource( 3 )

[node name="Checkpoint" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint"]
position = Vector2( 64, 8 )
shape = SubResource( 4 )
disabled = true
[connection signal="switched_on" from="Switch" to="." method="_on_Switch_switched_on"]
[connection signal="body_entered" from="Checkpoint" to="." method="_on_Checkpoint_body_entered"]
